--- a/src/app/component/random-recipes/random-recipes.component.css
+++ b/src/app/component/random-recipes/random-recipes.component.css
@@ -1,12 +1,12 @@
+/* random-recipes.component.css */
+
 .login-container {
-    background-image: url('/assets/A2.jpg'); 
-    background-size: cover;
-    background-position: center; 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    
-  }
- 
+  background-image: url('/assets/A2.jpg'); 
+  background-size: cover;
+  background-position: center; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
