--- a/src/app/component/recipes-list/recipes-list.component.css
+++ b/src/app/component/recipes-list/recipes-list.component.css
@@ -1,12 +1,42 @@
 .login-container {
-    background-image: url('/assets/A2.jpg'); 
-    background-size: cover;
-    background-position: center; 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    
-  }
- 
+  background-image: url('/assets/A2.jpg'); 
+  background-size: cover;
+  background-position: center; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  position: relative; 
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+li {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: rgba(255, 255, 255, 0.8); /* خلفية شفافة */
+}
+
+/* تحديث تنسيق الأزرار */
+.update-button,
+.delete-button {
+  padding: 8px 16px;
+  margin-left: 10px;
+  cursor: pointer;
+  font-size: 14px;
+  border: none;
+  border-radius: 4px;
+  background-color: #4caf50; /* لون زر التحديث وزر الحذف */
+  color: #fff; /* لون النص */
+}
