--- a/src/app/component/recipes-list/recipes-list.component.html
+++ b/src/app/component/recipes-list/recipes-list.component.html
@@ -1,15 +1,30 @@
 <app-nav-bar></app-nav-bar>
 <div class="login-container"></div>
+<br><br><br>
 <ul>
   <li *ngFor="let recipe of recipes">
     <div class="recipe-item">
       <span>{{ recipe.title }}</span> <br>
       <span>{{ recipe.ingredients }}</span> <br>
       <span>{{ recipe.instructions }}</span>
-      <br><br>
+      <br>
       
-      <button class="update-button" (click)="updateRecipe(recipe)">UPDATE</button>
       
+      <div *ngIf="recipe.isEditing">
+        <label for="editedTitle">Title:</label><br>
+        <input type="text" id="editedTitle" [(ngModel)]="recipe.editedTitle"><br>
+        
+        <label for="editedIngredients">Ingredients:</label><br>
+        <textarea id="editedIngredients" [(ngModel)]="recipe.editedIngredients"></textarea><br>
+        
+        <label for="editedInstructions">Instructions:</label><br>
+        <textarea id="editedInstructions" [(ngModel)]="recipe.instructions"></textarea><br>
+        
+        <button class="update-button" (click)="saveChanges(recipe)">Save Changes</button><br>
+      </div>
+      <br>
+     
+      <button class="update-button" (click)="toggleEdit(recipe)">UPDATE</button>
       
       <button class="delete-button" (click)="deleteRecipe(recipe)">DELETE</button>
     </div>
