--- a/src/app/component/random-recipes/random-recipes.component.css
+++ b/src/app/component/random-recipes/random-recipes.component.css
@@ -1,12 +1,14 @@
-/* random-recipes.component.css */
-
 .login-container {
-  background-image: url('/assets/A2.jpg'); 
+  background-image: url('/assets/A2.jpg');
   background-size: cover;
-  background-position: center; 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
+  background-position: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+    
+  }
+ 
+ 
