--- a/src/app/component/recipes-list/recipes-list.component.css
+++ b/src/app/component/recipes-list/recipes-list.component.css
@@ -1,34 +1,46 @@
+
 .login-container {
-  background-image: url('/assets/A2.jpg'); 
+  background-image: url('/assets/A2.jpg');
   background-size: cover;
-  background-position: center; 
+  background-position: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.content-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  position: relative; 
-}
+  padding-top: 100px; 
+  background: rgba(255, 255, 255, 0.8); }
 
 ul {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  box-sizing: border-box;
   list-style-type: none;
-  padding: 0;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
+  margin: 0;
+  width: 80%; 
+  margin: auto; 
+  background: rgba(255, 255, 255, 0.5); 
 }
 
 li {
   margin-bottom: 10px;
   padding: 10px;
   border: 1px solid #ccc;
-  background-color: rgba(255, 255, 255, 0.8); /* خلفية شفافة */
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: left;
 }
 
-/* تحديث تنسيق الأزرار */
 .update-button,
 .delete-button {
   padding: 8px 16px;
@@ -37,6 +49,6 @@ li {
   font-size: 14px;
   border: none;
   border-radius: 4px;
-  background-color: #4caf50; /* لون زر التحديث وزر الحذف */
-  color: #fff; /* لون النص */
+  background-color: #4caf50;
+  color: #fff;
 }
